--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-faiss-cpu
-langchain
-numpy
-nltk
-sentence_transformers
-streamlit
-langchain_google_genai
-dotenv
+faiss-cpu==1.7.2
+langchain==0.0.200
+numpy==1.23.0
+nltk==3.7
+sentence-transformers==2.2.0
+streamlit==1.12.0
+langchain-google-genai==0.1.2
+python-dotenv==0.19.2
