--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ numpy==1.23.0
 nltk==3.7
 sentence-transformers==2.2.0
 streamlit==1.12.0
-langchain_google_genai==0.1.2
-python-dotenv==0.19.2
+langchain_google_genai
+dotenv
