--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,12 @@ numpy==1.25.0
 nltk==3.9.1
 sentence-transformers==3.4.1
 streamlit==1.31.1
+pydantic==1.10.9 
 langchain==0.1.13
 langchain-google-genai
 python-dotenv==1.0.1
 altair==5.5.0
 torch==2.2.1
 huggingface_hub==0.28.1
-flask==3.0.2
 pillow
 google-generativeai
